--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -3,3 +3,23 @@ extends layout
 block content
   h1 Node.js, Express.js, Mongoose.js and Passport.js
   p User Authentication Example
+  table.table.table-hover#playersTable
+    thead
+      tr
+        th Username
+        th Connected
+        th Score
+        th TeamId
+
+input#username_hidden(type='hidden', value=admin.username)
+
+    
+block csss
+  link(rel='stylesheet', href='https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap.min.css')
+  link(rel='stylesheet', href='/stylesheets/style.css')
+
+block scripts
+  script(src='https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js', crossorigin='anonymous')
+  script(src='https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js', crossorigin='anonymous')
+  script(src='/socket.io/socket.io.js')
+  script(src='/javascripts/admin.js') 
