--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -15,7 +15,8 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='#') Node.js Auth
+          a.navbar-brand(href='/admin/players') Players
+          a.navbar-brand(href='/admin/teams') Teams
         div.collapse.navbar-collapse(id='bs-example-navbar-collapse-1')
           ul.nav.navbar-nav.navbar-right
             if (!admin)
