--- a/views/player/index.jade
+++ b/views/player/index.jade
@@ -1,9 +1,9 @@
 extends layout
 
 block content
-  h1 Node.js, Express.js, Mongoose.js and Passport.js
-  p #{player.username}
+  h1 Bienvenu #{player.username}
   input#username_hidden(type='hidden', value=player.username)
+  button GO!
     
 block scripts
   script(src='/socket.io/socket.io.js')
