--- a/views/admin/players.jade
+++ b/views/admin/players.jade
@@ -1,6 +1,15 @@
 extends layout
 
 block content
+  h1 Players
+  table.table.table-hover.table-striped.table-bordered#playersTable(style='width:100%', cellspacing='0')
+    thead
+      tr
+        th Username
+        th Connected
+        th Score
+
+input#username_hidden(type='hidden', value=admin.username)
 
     
 block csss
