--- a/views/admin/teams.jade
+++ b/views/admin/teams.jade
@@ -1,7 +1,17 @@
 extends layout
 
 block content
-
+  h1 Teams
+  form.form-inline(role='form', action='/admin/team/create', method='post')
+    input.form-control.mb-2.mr-sm-2.mb-sm-0(name='name', type='text', placeholder='Name')
+    input.form-control(name='color', type='text', placeholder='Color')
+    button.btn.btn-primary(type='submit') Create team
+  table.table.table-hover.table-striped.table-bordered#teamsTable(style='width:100%', cellspacing='0')
+    thead
+      tr
+        th Name
+        th Color
+  input#username_hidden(type='hidden', value=admin.username)
     
 block csss
   link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.css')
