assign team to player

--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -32,7 +32,10 @@ html
 
     div.container
       div.content
+        if(error) 
+          span #{error.message}
         block content
+      
 
     script(src="https://code.jquery.com/jquery-3.2.1.min.js", integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=", crossorigin="anonymous")
     block scripts
