--- a/views/admin/players.jade
+++ b/views/admin/players.jade
@@ -8,6 +8,7 @@ block content
         th Username
         th Connected
         th Score
+        th Team
 
 input#username_hidden(type='hidden', value=admin.username)
 
