--- a/views/player/index.jade
+++ b/views/player/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Bienvenu #{player.username}
+  h1 Bienvenue #{player.username}
   input#username_hidden(type='hidden', value=player.username)
   button GO!
     
