--- a/views/player/login.jade
+++ b/views/player/login.jade
@@ -4,5 +4,5 @@ block content
   .container
     form.form-signin(role='form', action="/player/login",method="post", style='max-width: 300px;')
       h2.form-signin-heading Sign Up here
-      input.form-control(type='text', name="username", placeholder='Your Username')
+      input.form-control(type='text', name="username", placeholder='Your Username', required)
       button.btn.btn-lg.btn-primary.btn-block(type='submit') Sign Up
