--- a/views/admin/login.jade
+++ b/views/admin/login.jade
@@ -8,5 +8,5 @@ block content
       h2.form-signin-heading Please sign in
       label.sr-only(for='inputEmail')
       input.form-control(type='text', name='username', id='inputEmail', placeholder='Username', required, autofocus)
-      input.form-control(type='password', name='password', id='inputPassword', placeholder='Password')
+      input.form-control(type='password', name='password', id='inputPassword', placeholder='Password', required)
       button.btn.btn-lg.btn-primary.btn-block(type='submit') LOGIN
