--- a/views/admin/register.jade
+++ b/views/admin/register.jade
@@ -4,6 +4,6 @@ block content
   .container
     form.form-signin(role='form', action="/admin/register",method="post", style='max-width: 300px;')
       h2.form-signin-heading Sign Up here
-      input.form-control(type='text', name="username", placeholder='Your Username')
-      input.form-control(type='password', name="password", placeholder='Your Password')
+      input.form-control(type='text', name="username", placeholder='Your Username', required)
+      input.form-control(type='password', name="password", placeholder='Your Password', required)
       button.btn.btn-lg.btn-primary.btn-block(type='submit') Sign Up
