--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -1,13 +1,19 @@
 extends layout
 
 block content
+  input#username_hidden(type='hidden', value=admin.username)
+  table#Game.table
+    thead
+      tr
+        th Player username
+        th Date
 
-    
+
+
 block csss
   link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.css')
   link(rel='stylesheet', href='https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css')
   link(rel='stylesheet', href='/stylesheets/style.css')
-
 
 block scripts
   script(src='https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js', crossorigin='anonymous')
