--- a/views/admin/teams.jade
+++ b/views/admin/teams.jade
@@ -1,8 +1,8 @@
 h1 Teams
-form.form-inline(role='form', action='/admin/team/create', method='post')
-  input.form-control.mb-2.mr-sm-2.mb-sm-0(name='name', type='text', placeholder='Name', required)
-  input.jscolor.form-control(name='color', type='text', placeholder='Color', required)
-  button.btn.btn-primary(type='submit') Create team
+div.form-inline
+  input#create_team_name.form-control.mb-2.mr-sm-2.mb-sm-0(name='name', type='text', placeholder='Name', required)
+  input#create_team_color.jscolor.form-control(name='color', type='text', placeholder='Color', required)
+  button#create_team.btn.btn-primary(type='button') Create team
 table.table.table-hover.table-striped.table-bordered#teamsTable(style='width:100%', cellspacing='0')
   thead
     tr
