action in songs table

--- a/views/admin/songs.jade
+++ b/views/admin/songs.jade
@@ -7,3 +7,4 @@ table.table.table-hover.table-striped.table-bordered#songsTable(style='width:100
       th Jacket
       th Title
       th Artist
+      th Songs
