--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -52,6 +52,7 @@ html
       script(src='/socket.io/socket.io.js')
       script(src='/javascripts/Datatables.js')
       script(src='/javascripts/Ajax.js')
+      script(src='/javascripts/Socket.js')
       script(src='/javascripts/admin_copy.js')
       script.
         $(document).on('click', '[action="navigate"]', function () {
