[FINISHED] Improve SongController

--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -53,7 +53,7 @@ html
       script(src='/javascripts/Datatables.js')
       script(src='/javascripts/Ajax.js')
       script(src='/javascripts/Socket.js')
-      script(src='/javascripts/admin_copy.js')
+      script(src='/javascripts/LoadJS.js')
       script.
         $(document).on('click', '[action="navigate"]', function () {
             var page = $(this).attr('page');
