--- a/views/admin/register.jade
+++ b/views/admin/register.jade
@@ -2,8 +2,8 @@ extends layout
 
 block content
   .container
-    form.form-signin(role='form', action="/admin/register",method="post", style='max-width: 300px;')
+    form.form-signin(role='form', action='/admin/register',method='post', style='max-width: 300px;')
       h2.form-signin-heading Sign Up here
-      input.form-control(type='text', name="username", placeholder='Your Username', required)
-      input.form-control(type='password', name="password", placeholder='Your Password', required)
+      input.form-control(type='text', name='username', placeholder='Your Username', required)
+      input.form-control(type='password', name='password', placeholder='Your Password', required)
       button.btn.btn-lg.btn-primary.btn-block(type='submit') Sign Up
