--- a/views/admin/songs.jade
+++ b/views/admin/songs.jade
@@ -1,5 +1,5 @@
 h1 Songs
-input#search_song_input(placeholder="Search song")
+input#search_song_input(placeholder='Search song')
 
 table.table.table-hover.table-striped.table-bordered#songsTable(style='width:100%', cellspacing='0')
   thead
