--- a/views/player/login.jade
+++ b/views/player/login.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   .container
-    form.form-signin(role='form', action="/player/login",method="post", style='max-width: 300px;')
+    form.form-signin(role='form', action='/player/login',method='post', style='max-width: 300px;')
       h2.form-signin-heading Sign Up here
-      input.form-control(type='text', name="username", placeholder='Your Username', required)
+      input.form-control(type='text', name='username', placeholder='Your Username', required)
       button.btn.btn-lg.btn-primary.btn-block(type='submit') Sign Up
