--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -46,6 +46,7 @@ html
     if(admin) 
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
       script(src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js')
+      script(src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js')
       script(src='https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js')
       script(src='https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js')
       script(src='/javascripts/jscolor.min.js')
@@ -56,7 +57,6 @@ html
       script(src='/javascripts/LoadJS.js')
       script.
         $(document).on('click', '[action="navigate"]', function () {
-            console.log('hello')
             var page = $(this).attr('page');
             $('#content').attr('data-page', page);
             $.ajax({
