Deezer implementation, spotify deleted

--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -55,6 +55,7 @@ html
       script(src='/javascripts/Ajax.js')
       script(src='/javascripts/Socket.js')
       script(src='/javascripts/LoadJS.js')
+      script(src='https://e-cdns-files.dzcdn.net/js/min/dz.js')
       script.
         $(document).on('click', '[action="navigate"]', function () {
             var page = $(this).attr('page');
