--- a/views/admin/songs.jade
+++ b/views/admin/songs.jade
@@ -1,5 +1,7 @@
 h1 Songs
 
+#musicPlayer.col-md-12
+  #dz-root
 
 button.btn.btn-primary(type='button' data-toggle='modal' data-target='#songsModal') Manage songs
 
