Musicplayer implementation (end) Style needed

--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -54,6 +54,7 @@ html
       script(src='/javascripts/Datatables.js')
       script(src='/javascripts/Ajax.js')
       script(src='/javascripts/Socket.js')
+      script(src='/javascripts/Musicplayer.js')
       script(src='/javascripts/LoadJS.js')
       script(src='https://e-cdns-files.dzcdn.net/js/min/dz.js')
       script.
