--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -9,8 +9,8 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     nav.navbar.navbar-default
-      div.container-fluid
-        div.navbar-header
+      .container-fluid
+        .navbar-header
           button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
             span.sr-only Toggle navigation
             span.icon-bar
@@ -20,7 +20,7 @@ html
             a.navbar-brand(action='navigate', page='players') Players
             a.navbar-brand(action='navigate', page='teams') Teams
             a.navbar-brand(action='navigate', page='songs') Songs
-        div#bs-example-navbar-collapse-1.collapse.navbar-collapse
+        #bs-example-navbar-collapse-1.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right
             if(!admin)
               li
@@ -33,14 +33,16 @@ html
               li
                 a(href='/admin/logout') Logout
 
-    div.container
+    .container
       if(admin)
         include musicplayer
-      div.content
+      .content
         if(error) 
           span #{error.message}
-        div#content(data-page='home')
+        #content(data-page='home')
           block content
+    if(admin)
+      include answer
       
 
     script(src='https://code.jquery.com/jquery-3.2.1.min.js', integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=', crossorigin='anonymous')
