dynamic modal call process OK, need implement style

--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -42,7 +42,7 @@ html
         #content(data-page='home')
           block content
     if(admin)
-      include answer
+      include modals
       
 
     script(src='https://code.jquery.com/jquery-3.2.1.min.js', integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=', crossorigin='anonymous')
