--- a/views/admin/modals/answer.jade
+++ b/views/admin/modals/answer.jade
@@ -2,17 +2,13 @@
   .modal-dialog(role='document')
     .modal-content
       .modal-header
-        h5#exampleModalLabel.modal-title New message
+        h5#exampleModalLabel.modal-title Answer
         button.close(type='button', data-dismiss='modal', aria-label='Close')
           span(aria-hidden='true') ×
       .modal-body
-        form
-          .form-group
-            label.col-form-label(for='recipient-name') Recipient:
-            input#recipient-name.form-control(type='text')
-          .form-group
-            label.col-form-label(for='message-text') Message:
-            textarea#message-text.form-control
+        p #{player.username} answered at #{time}
+        if(track)
+          p The answer is #{track.title} - #{track.artist.name}
       .modal-footer
         button.btn.btn-secondary(type='button', data-dismiss='modal') Close
         button.btn.btn-primary(type='button') Send message
