--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,3 +36,12 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+a.list-group-item:not(.small):hover,
+button.list-group-item:not(.small):hover {
+  text-decoration: none;
+  /* line-height: 40px; */
+  /* padding: 0px; */
+  background-color: #245580;
+  color: #f5f5f5;
+}
