--- a/views/admin/teams.jade
+++ b/views/admin/teams.jade
@@ -10,6 +10,17 @@ table.table.table-hover.table-striped.table-bordered#teamsTable(style='width:100
       th Color
 input#username_hidden(type='hidden', value=admin.username)
 
+!{JSON.stringify(playersWithoutTeam)}
+
+#teamsContent
+
+.panel.panel-default
+  .panel-heading NO TEAM PLAYERS
+  .panel-body
+    for player in playersWithoutTeam
+      h3.draggable(style='margin:0px', data-playerid='' +  player._id)
+        span.label.label-default #{player.username}
+
 #teamPanel
   .panel.list-group
     for team, i in teams
@@ -20,7 +31,7 @@ input#username_hidden(type='hidden', value=admin.username)
         | #{team.name} 
       if team.players.length > 0
         for player in team.players
-          div(id='list-' + i).sublinks.collapse.draggable(data-playerid='' +  player._id)
+          div(id='list-' + i, data-playerid='' +  player._id).sublinks.collapse.draggable            
             a.list-group-item.small
               span.glyphicon.glyphicon-chevron-right
               |  #{player.username}
